--- a/en-US/2.quickstart/1.quickly-experience-oceanbase-for-community.md
+++ b/en-US/2.quickstart/1.quickly-experience-oceanbase-for-community.md
@@ -6,10 +6,10 @@ This topic describes how to deploy OceanBase Database in a demo environment, a c
   <h4>Note</h4>
   <ul>
   <li>
-  <p>You can refer to this topic only for quick hands-on experience of OceanBase Database but not for production purposes. To deploy OceanBase Database in a production environment, see <a href="../4.deploy/1.deploy-overview.md">Deployment overview</a> in the OceanBase Database Documentation. </p>
+  <p>The deployment solutions outlined in this topic are only suitable for quick hands-on with OceanBase Database and are not intended for use in production environments. To deploy OceanBase Database in a production environment, refer to <a href="../4.deploy/1.deploy-overview.md">Deployment overview</a>. </p>
   </li>
   <li>
-  <p>Deployment in a demo environment or a cluster applies to both OceanBase Database Enterprise Edition and OceanBase Database Community Edition. Deployment in a container applies only to the community edition.<b></b><b></b><b></b> </p>
+  <p>The solutions for deploying OceanBase Database in a demo environment or a cluster are applicable to both OceanBase Database Enterprise Edition and OceanBase Database Community Edition. However, the solution for deploying OceanBase Database in a container applies only to the Community Edition.<b></b><b></b><b></b> </p>
   </li>
   </ul>
 </main>
@@ -24,13 +24,13 @@ Three deployment solutions are provided for you to quickly get started with Ocea
 
 * Solution 1: Deploy OceanBase Database in a demo environment
 
-   If you have only one server, you can quickly build a demo environment to deploy OceanBase Database. The demo database provides basic features for you to quickly learn about OceanBase Database, but does not support distributed capabilities or high availability. Therefore, long-term use is not recommended. For more information, see the **Solution 1: Deploy OceanBase Database in a demo environment** section blow.
+   If you have only one server, you can quickly build a demo environment to deploy OceanBase Database. The demo environment provides basic features for you to quickly learn about OceanBase Database, but does not support distributed capabilities or high availability. Therefore, long-term use is not recommended. For more information, see the **Solution 1: Deploy OceanBase Database in a demo environment** section blow.
 
 * Solution 2: Deploy OceanBase Database in a cluster
 
    You can choose this solution if you want to learn more about the distributed architecture and features of OceanBase Database. The cluster provides distributed capabilities and high availability apart from complete database features. To use this solution, you must have three hosts, each of which has four CPU cores, 10 GB of memory, and 50 GB of disk space. For more information, see the **Solution 2: Deploy OceanBase Database in a cluster** section below.
 
-* Solution 3: Deploy OceanBase Database in a container (applicable only to the community edition)
+* Solution 3: Deploy OceanBase Database in a container (applicable only to the Community Edition)
 
    If you are using a non-Linux OS, such as Windows or macOS, and want to deploy and manage OceanBase Database in a container, you can choose this solution. This solution has not been verified by large-scale practices and therefore is not recommended. For more information, see the **Solution 3: Deploy OceanBase Database in a container** section below.
 
@@ -40,7 +40,7 @@ Your software and hardware environments meet the following requirements.
 
 | Item               | Requirement                                                                                                                                                                                                                                                                                                                                                                                                                                          |
 |--------------------|------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| OS                 | <ul><li>Anolis OS 8.X (Linux kernel 3.10.0 or later)</li><li>Red Hat Enterprise Linux Server 7.X (Linux kernel 3.10.0 or later)</li><li>CentOS Linux 7.X or later (Linux kernel 3.10.0 or later)</li><li>KylinOS V10</li><li>Anolis OS 8.6 or later</li><li>Unity Operating System (UOS) 1020a/1021a/1021e/1001c</li><li>NFSChina V4.0 or later</li><li>Inspur KOS V5.8</li><li>BCLinux BigCloud Enterprise Linux For Euler 21.10 LTS</li></ul> |
+| OS                 | <ul><li>AliOS 7.2 or later (Linux kernel 3.10.0 or later)</li><li>Red Hat Enterprise Linux Server 7.X (Linux kernel 3.10.0 or later)</li><li>CentOS Linux 7.X or later (Linux kernel 3.10.0 or later)</li><li>KylinOS V10</li><li>Anolis OS 8.6 or later</li><li>Unity Operating System (UOS) 1020a/1021a/1021e/1001c</li><li>NFSChina V4.0 or later</li><li>Inspur KOS V5.8</li><li>BCLinux BigCloud Enterprise Linux For Euler 21.10 LTS</li></ul> |
 | CPU                | At least two cores or preferably four cores or more                                                                                                                                                                                                                                                                                                                                                                                                  |
 | Memory             | At least 8 GB or preferably 16 GB or more                                                                                                                                                                                                                                                                                                                                                                                                            |
 | Disk type          | SSD (recommended)                                                                                                                                                                                                                                                                                                                                                                                                                                    |
@@ -75,32 +75,32 @@ If you have only one server available, you can run the `obd demo` command to qui
    [admin@test001 bin]$ source ~/.oceanbase-all-in-one/bin/env.sh
    ```
 
-### Step 2: Deploy the OceanBase database on a single server
+### Step 2: Deploy OceanBase Database on a single server
 
 1. Run either of the following commands for quick deployment.
 
-   * Enterprise edition
+   * Enterprise Edition
 
       ```shell
       [admin@test001 ~]$ obd demo -c oceanbase,obproxy,obagent,prometheus,grafana
       ```
 
-   * Community edition
+   * Community Edition
 
       ```shell
       [admin@test001 ~]$ obd demo
       ```
 
-   By default, the `obd demo` command deploys the OceanBase database and its components (which are ODP, OBAgent, Grafana, and Prometheus) with minimum specifications and then starts them in the home directory of the current user. The name of the deployed cluster is fixed to `demo` in OBD. For more information about custom deployment, see [Quick deployment command](https://en.oceanbase.com/docs/community-obd-en-10000000000860052).
+   By default, the `obd demo` command deploys OceanBase Database and its components (which are ODP, OBAgent, Grafana, and Prometheus) with minimum specifications and then starts them in the home directory of the current user. The name of the deployed cluster is fixed to `demo` in OBD. For more information about custom deployment, see [Quick deployment command](https://en.oceanbase.com/docs/community-obd-en-10000000000860052).
 
-   You can use OBD commands to manage the OceanBase database. For more information about the commands, see [Cluster commands](https://en.oceanbase.com/docs/community-obd-en-10000000000862273).
+   You can use OBD commands to manage OceanBase Database. For more information about the commands, see [Cluster commands](https://en.oceanbase.com/docs/community-obd-en-10000000000862273).
 
    <main id="notice" type='explain'>
       <h4>Note</h4>
       <p>If you install Grafana or Prometheus, its access address is returned in the command output. On Alibaba Cloud or other cloud environments, the command may fail to obtain a public IP address but return a private IP address. You must use a correct public IP address. </p>
    </main>
 
-2. Connect to the OceanBase database from OBClient.
+2. Connect to OceanBase Database from OBClient.
 
    * Directly connect to the database through port 2881
 
@@ -140,9 +140,9 @@ If you have multiple servers available, you can run the `obd web` command to sta
    [admin@test001 bin]$ source ~/.oceanbase-all-in-one/bin/env.sh
    ```
 
-### Step 2: Deploy the OceanBase database on the GUI
+### Step 2: Deploy OceanBase Database on the GUI
 
-1. Run the `obd web` command on the CLI to start the GUI of OBD. Visit the URL in the output and click **Try Now** on the page displayed to start deployment.
+1. Run the `obd web` command in your CLI to start the GUI of OBD. Visit the URL in the output and click **Try Now** on the page displayed to start deployment.
 
    ```shell
    [admin@test001 ~]$ obd web
@@ -184,9 +184,9 @@ If you have multiple servers available, you can run the `obd web` command to sta
 
 7. Click **Complete**.
 
-8. Connect to the OceanBase database from OBClient or log on to the GUI of OCP Express to manage the cluster.
+8. Connect to OceanBase Database from OBClient or log on to the GUI of OCP Express to manage the cluster.
 
-   * Directly connect to the OBServer node 10.10.10.1 of the database through port 2881
+   * Directly connect to OBServer node 10.10.10.1 of the database through port 2881
 
       ```shell
       [admin@test001 ~]$ obclient -h10.10.10.1 -P2881 -uroot@sys -Doceanbase -A
