--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/2.tomcat-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/2.tomcat-connection-pool-configuration-example-of-mysql-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a Tomcat connection pool
+# Configure a Tomcat connection pool
 
-This topic describes a configuration example of a Tomcat connection pool. 
+This topic provides a configuration example of a Tomcat connection pool. 
 
 ## Example
 
