--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/3.c3p0-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/3.c3p0-connection-pool-configuration-example-of-mysql-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a C3P0 connection pool
+# Configure a C3P0 connection pool
 
-This topic describes how to configure dependencies for a C3P0 connection pool and provides relevant sample code. 
+This topic provides a configuration example of a C3P0 connection pool. 
 
 ## Configure dependencies
 
@@ -10,6 +10,18 @@ This topic describes how to configure dependencies for a C3P0 connection pool an
    <artifactId>c3p0</artifactId>
    <version>0.9.5</version>
  </dependency>
+```
+```plaintext
+<dependency>
+    <groupId>com.oceanbase</groupId>
+    <artifactId>oceanbase-client</artifactId>
+    <version>2.4.0</version>
+</dependency>
+<dependency>
+    <groupId>com.mchange</groupId>
+    <artifactId>c3p0</artifactId>
+    <version>0.9.5</version>
+</dependency>
 ```
 
 ## Sample code
@@ -21,7 +33,7 @@ public class C3P0PoolTest {
         dataSource.setDriverClass("com.oceanbase.jdbc.Driver");
         dataSource.setJdbcUrl("jdbc:oceanbase://10.100.xxx.xxx:30035/test?useSSL=false");
         dataSource.setUser("test@tt3");
-        dataSource.setPassword("test");
+        dataSource.setPassword("******");
         dataSource.setInitialPoolSize(3);
         dataSource.setMaxPoolSize(10);
         dataSource.setMinPoolSize(3);
