--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/6.dbcp-connection-pool-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/6.dbcp-connection-pool-example-of-mysql-mode.md
@@ -1,37 +1,37 @@
-# Example of configuring a DBCP connection pool
+# Configure a DBCP connection pool
 
-This topic describes how to configure dependencies and configuration files for a DBCP connection pool and provides relevant sample code. 
+This topic provides a configuration example of a DBCP connection pool. 
 
 ## Configure dependencies
 
 ```xml
 <dependencies>
-        <dependency>
-            <groupId>com.alipay.oceanbase</groupId>
-            <artifactId>oceanbase-client</artifactId>
-            <version>3.2.3</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-pool2</artifactId>
-            <version>2.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>commons-logging</groupId>
-            <artifactId>commons-logging</artifactId>
-            <version>1.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-dbcp2</artifactId>
-            <version>2.7.0</version>
-        </dependency>
-        <dependency>
-            <groupId>org.junit.jupiter</groupId>
-            <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
-        </dependency>
-    </dependencies>
+    <dependency>
+        <groupId>com.oceanbase</groupId>
+        <artifactId>oceanbase-client</artifactId>
+        <version>2.4.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-pool2</artifactId>
+        <version>2.7.0</version>
+    </dependency>
+    <dependency>
+        <groupId>commons-logging</groupId>
+        <artifactId>commons-logging</artifactId>
+        <version>1.2</version>
+    </dependency>
+    <dependency>
+        <groupId>org.apache.commons</groupId>
+        <artifactId>commons-dbcp2</artifactId>
+        <version>2.7.0</version>
+    </dependency>
+    <dependency>
+        <groupId>org.junit.jupiter</groupId>
+        <artifactId>junit-jupiter-api</artifactId>
+        <version>5.7.0</version>
+    </dependency>
+</dependencies>
 ```
 
 ## Configuration files
@@ -46,7 +46,7 @@ url=jdbc:oceanbase://10.xx.xxx.xxx:18817/test?useSSL=false&useServerPrepStmts=tr
 #Username
 username=axxxx@oracle
 #Password
-password=xxxx
+password=******
 #Number of initial connections
 initialSize=30
 #Maximum number of active connections
