--- a/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/2.design-a-database-object-of-mysql-mode/3.create-a-table-of-mysql-mode.md
@@ -4,7 +4,7 @@ This topic describes the requirements and examples for creating a table.
 
 ## About tables
 
-A database table is a collection of two-dimensional arrays and represents and stores the relationship between database objects. 
+A database table is a collection of two-dimensional arrays that represent and store the relationships between different objects in a database.
 
 Tables in OceanBase Database can be classified into partitioned tables and non-partitioned tables based on the distribution of data.
 
@@ -55,7 +55,7 @@ Observe the following requirements when you define columns for a table:
 
 * Select a proper data type for the data to be stored in columns. 
 
-   For more information about the data types supported in MySQL mode of OceanBase Database, see [Overview](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md). 
+   For more information about the data types supported in MySQL mode of OceanBase Database, see [Overview of data types](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/1.data-type-overview-of-mysql-mode.md). 
 
 * For string data, we recommend that you use a variable-length string data type and specify the maximum length. Make sure that the maximum length specified is greater than the maximum number of characters to store. This is to avoid character truncation when the maximum length is exceeded. 
 
@@ -67,9 +67,9 @@ Observe the following requirements when you define columns for a table:
 
 ### Define primary key columns
 
-A PRIMARY KEY constraint imposes a primary key value rule on a key, which can be a column or set of columns. This rule ensures that the values in the group of one or more columns subject to the constraint uniquely identify the row. You can define only one `PRIMARY KEY` constraint on a table. The values of the primary key column or columns can be used as the unique identifiers of their corresponding rows. Therefore, each row can be named by a primary key value. 
+A `PRIMARY KEY` constraint imposes a primary key value rule on a key, which can be a column or set of columns. This rule ensures that the values in the group of one or more columns subject to the constraint uniquely identify the row. You can define only one `PRIMARY KEY` constraint on a table. The values of the primary key column or columns can be used as the unique identifiers of their corresponding rows. Therefore, each row can be named by a primary key value. 
 
-To specify a column as a primary key column, add the `PRIMARY KEY` keyword to the definition of this column. To define a PRIMARY KEY constraint on multiple columns, add the definition of the PRIMARY KEY constraint after the list of columns in the [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md) statement. 
+To specify a column as a primary key column, add the `PRIMARY KEY` keyword to the definition of this column. To define a `PRIMARY KEY` constraint on multiple columns, add the definition of the `PRIMARY KEY` constraint after the list of columns in the [CREATE TABLE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md) statement. 
 
 Observe the following requirements when you define primary key columns:
 
@@ -85,9 +85,9 @@ Observe the following requirements when you define primary key columns:
 
 * The values of a primary key column cannot be null or empty. You must enter values to a primary key column. 
 
-* We recommend that a PRIMARY KEY constraint be explicitly identified by its name. For example, name a PRIMARY KEY constraint "PK_xxx". 
+* We recommend that a `PRIMARY KEY` constraint be explicitly identified by its name. For example, name a `PRIMARY KEY` constraint "PK_xxx". 
 
-For more information about PRIMARY KEY constraints, see [PRIMARY KEY constraints](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md). 
+<!-- For more information about PRIMARY KEY constraints, see [PRIMARY KEY constraints](../../../7.reference/1.oceanbase-database-concepts/4.database-objects/2.database-objects-of-mysql-mode/7.data-integrity-of-mysql-mode/2.integrity-constraint-type-of-mysql-mode/4.primary-key-constraint-of-mysql-mode.md).  -->
 
 Example 2: Define a `PRIMARY KEY` constraint on multiple columns. 
 
@@ -105,7 +105,7 @@ obclient> desc test;
 2 rows in set
 ```
 
-In this example, `c1` and `c2` are defined as primary key columns and a PRIMARY KEY constraint named `PK_c1_c2` is defined for them.  The values of the `c1` and `c2` columns cannot be `NULL` or duplicate. 
+In this example, `c1` and `c2` are defined as primary key columns and a `PRIMARY KEY` constraint named `PK_c1_c2` is defined for them.  The values of the `c1` and `c2` columns cannot be `NULL` or duplicate. 
 
 After you define primary key columns, you can delete them. For more information about operations related to PRIMARY KEY constraints, see [Define column constraints](../../../7.reference/2.administrator-guide/3.database-object-management/1.manage-object-of-mysql-mode/2.manage-tables-of-mysql-mode/4.define-the-constraint-type-for-a-column-of-mysql-mode.md). 
 
@@ -163,7 +163,7 @@ obclient> DESC tbl1;
 2 rows in set
 ```
 
-In this example, when you insert data later, the values inserted into the `col1` column cannot be NULL.
+In this example, when you insert data later, the values inserted into the `col1` column cannot be `NULL`.
 
 Example 4: Create a table named `tbl2` and add a `UNIQUE` constraint on the `col2` column. 
 
@@ -234,7 +234,7 @@ An auto-increment column has three important attributes: start value, increment,
 | auto_increment_increment | The increment. Value range: [1, 65535]. Default value: `1`. It is a session-level variable.  |
 | auto_increment_offset | The start value of the auto-increment column. Value range: [1,65535]. Default value: `1`. It is a session-level variable. |
 
-You can change the values of the three variables as needed. For more information about how to change the values of system variables, see [Overview](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md). 
+You can change the values of the three variables as needed. For more information about how to change the values of system variables, see [Overview of system variables](../../../7.reference/5.system-reference/2.system-variable-of-mysql-mode/1.overview-of-system-variables-of-mysql-mode.md). 
 
 Observe the following requirements when you define an auto-increment column:
 
@@ -246,9 +246,10 @@ Observe the following requirements when you define an auto-increment column:
 
 Assume that after you create an auto-increment column, you specify a value of the auto-increment column when you use the `INSERT` statement to insert data and the system variable `SQL_MODE` is not set to `NO_AUTO_VALUE_ON_ZERO`. If the specified value is `0`, the system will insert the next value of the auto-increment column into the column. If the specified value is smaller than the current maximum value, the calculation of the next value of the auto-increment column is not affected. If the specified value is greater than the current maximum value, the auto-increment column uses the sum of the inserted value and the cached auto-increment value as the start value of the next increment operation. 
 
-> **Note**
->
-> If the system variable `SQL_MODE` is set to `NO_AUTO_VALUE_ON_ZERO`, auto-increment values do not need to be generated for a column into which the value 0 is inserted.
+<main id="notice" type='explain'>
+    <h4>Note</h4>
+    <p>If the system variable `SQL_MODE` is set to `NO_AUTO_VALUE_ON_ZERO`, auto-increment values do not need to be generated for a column into which the value 0 is inserted.</p>
+</main>
 
 Example 7: Create a table with an auto-increment column. 
 
@@ -416,9 +417,10 @@ In this example, the partitioning key in RANGE partitioning must be of the INT d
 
 When you create a subpartitioned table by using a template, you do not need to separately specify the name of each subpartition after the subpartition definition is completed. The system names the subpartitions in the `($part_name)s($subpart_name)` format based on the naming rules. In this example, the subpartitions in the `p0` partition are named as `p0smp0`, `p0smp1`, and `p0smp2`. 
 
-> **Notice**
->
-> If you use HASH or KEY partitioning to subpartition a table by specifying the number of subpartitions (such as `SUBPARTITIONS 5`), you do not need to specify the `SUBPARTITION TEMPLATE` keyword when you create a subpartitioned table by using a template. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>If you use HASH or KEY partitioning to subpartition a table by specifying the number of subpartitions (such as <code>SUBPARTITIONS 5</code>), you do not need to specify the <code>SUBPARTITION TEMPLATE</code> keyword when you create a subpartitioned table by using a template.</p>
+  </main>
 
 Example 12: Create a LIST-LIST COLUMNS-subpartitioned table without using a template. 
 
