--- a/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/3.write-data-of-mysql-mode/2.update-data.md
@@ -7,10 +7,11 @@ After you insert data into a table, you can use the `UPDATE` statement or other 
 Before you update the data in a table, make sure that:
 
 * You have logged on to a MySQL tenant of OceanBase Database. For more information about how to connect to OceanBase Database, see [Overview](../1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md). 
-
-   > **Note**
-   >
-   > You can query the `oceanbase.DBA_OB_TENANTS` view in the `sys` tenant to confirm the mode of the tenant to which you have logged on. 
+ 
+  <main id="notice" type='explain'>
+   <h4>Note</h4>
+   <p>You can query the <code>oceanbase.DBA_OB_TENANTS</code> view in the <code>sys</code> tenant to confirm the mode of the tenant to which you have logged on.</p>
+  </main>
 
 * You have the `UPDATE` privilege on the target table. For more information about how to view your privileges, see [View user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/4.view-user-permissions-of-mysql-mode.md). If you do not have the required privileges, contact the administrator. For more information, see [Modify user privileges](../../../6.manage/5.security-and-permissions/3.access-control/2.user-and-permission/2.permission-of-mysql-mode/5.modify-user-permissions-of-mysql-mode.md). 
 
@@ -18,7 +19,7 @@ Before you update the data in a table, make sure that:
 
 Generally, the [UPDATE](../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/90.update-of-mysql-mode.md) statement is used to update the data in a table. 
 
-`Syntax`:
+Syntax:
 
 ```sql
 UPDATE table_name
@@ -53,7 +54,7 @@ obclient [test]> SELECT * FROM t_insert;
 4 rows in set
 ```
 
-When you execute the `UPDATE` statement, make sure that the transaction is not large. You can use the `LIMIT` keyword to control the number of records to be updated or the `WHERE` keyword to control the scope of records to be updated. When you execute an UPDATE statement that involves more than one hundred thousand records without using the where clause, a large transaction is generated and, the update may fail. For a large transaction, the following error is returned: 
+When you execute the `UPDATE` statement, make sure that the transaction is not large. You can use the `LIMIT` keyword to control the number of records to be updated or the `WHERE` keyword to control the scope of records to be updated. When you execute an `UPDATE` statement that involves more than one hundred thousand records without using the where clause, a large transaction is generated and, the update may fail. For a large transaction, the following error is returned: 
 
 ```sql
 obclient [test]> UPDATE t_insert SET value = value+1;
