--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/2.single-table-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/2.single-table-query-of-mysql-mode.md
@@ -36,9 +36,10 @@ If you use the `WHERE`, `GROUP BY`, `HAVING`, `ORDER BY`, and `LIMIT` keywords i
 
 8. Execute `LIMIT` to limit the number of records. 
 
-> **Notice**
->
-> Take note of the difference between the `WHERE` and `HAVING` clauses. The `WHERE` clause filters data before grouping or aggregation, whereas the `HAVING` clause filters data after grouping and returns the entire SQL query result. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>The difference between the <code>WHERE</code> and <code>HAVING</code> clauses is that the <code>WHERE</code> clause filters data before grouping or aggregation, whereas the <code>HAVING</code>  clause filters data after grouping and returns the entire SQL query result.</p>
+  </main>
 
 ## SELECT queries
 
@@ -129,29 +130,29 @@ Example:
 
    ```sql
    obclient> SELECT empname AS Employee name, deptno AS Department No. FROM emp;
-   +--------------+--------------+
-   | Employee name     | Department No.     |
-   +--------------+--------------+
-   | SMITH        |           20 |
-   | ALLEN        |           30 |
-   | JONES        |           40 |
-   | BLAKE        |           30 |
-   | SCOTT        |           20 |
-   | FORD         |           40 |
-   +--------------+--------------+
+   +--------------+---------------+
+   | Employee name| Department No.|
+   +--------------+---------------+
+   | SMITH        |           20  |
+   | ALLEN        |           30  |
+   | JONES        |           40  |
+   | BLAKE        |           30  |
+   | SCOTT        |           20  |
+   | FORD         |           40  |
+   +--------------+---------------+
    6 rows in set
 
    obclient> SELECT empname 'Employee name', deptno AS 'Department No.' FROM emp;
-   +--------------+--------------+
-   | Employee name     | Department No.     |
-   +--------------+--------------+
-   | SMITH        |           20 |
-   | ALLEN        |           30 |
-   | JONES        |           40 |
-   | BLAKE        |           30 |
-   | SCOTT        |           20 |
-   | FORD         |           40 |
-   +--------------+--------------+
+   +--------------+---------------+
+   | Employee name| Department No.|
+   +--------------+---------------+
+   | SMITH        |           20  |
+   | ALLEN        |           30  |
+   | JONES        |           40  |
+   | BLAKE        |           30  |
+   | SCOTT        |           20  |
+   | FORD         |           40  |
+   +--------------+---------------+
    6 rows in set
    ```
 
