--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/3.conditional-query-of-mysql-mode.md
@@ -40,7 +40,7 @@ Returns data equal to the value in the specified column. If the value is a strin
 SELECT column_name [,column_name...] FROM table_name WHERE column_name = const_value;
 ```
 
-Example:
+Examples:
 
 * Query the data of the `empname` and `deptno` columns whose `deptno` value is equal to 30 in the `emp` table. 
 
@@ -85,7 +85,7 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name <> const_
 SELECT column_name [,column_name...] FROM table_name WHERE column_name != const_value;
 ```
 
-Example:
+Examples:
 
 Query the data of the `empname` and `deptno` columns whose `deptno` value is not 30 in the `emp` table. 
 
@@ -122,11 +122,12 @@ SELECT column_name [,column_name...] FROM table_name WHERE column_name < const_v
 SELECT column_name [,column_name...] FROM table_name WHERE column_name > const_value;
 ```
 
-> **Note**
->
-> The equal to or greater than (>=) and equal to or less than (<=) operators operate in a similar manner. 
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>The equal to or greater than (>=) and equal to or less than (<=) operators operate in a similar manner.</p>
+</main>
 
-Example:
+Examples:
 
 * Query the data of the `empname` and `deptno` columns whose `deptno` value is greater than 30 in the `emp` table. 
 
@@ -255,7 +256,7 @@ The LIKE predicate searches the specified column value and returns the data that
 
 * The percent sign (%) matches zero or multiple characters in the value. The pattern "%" cannot match `NULL`. 
 
-Example:
+Examples:
 
 * Query the data in the `emp` table whose `empname` value is in the format of "ALLE_", where the last bit is any character. 
 
@@ -285,6 +286,11 @@ Example:
    >
    > If the database character set is ASCII, one Chinese character needs two underscores (`_`); if the database character set uses GBK, one Chinese character needs only one underscore (`_`). 
 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>If the database character set is ASCII, one Chinese character needs two underscores (<code>_</code>); if the database character set uses GBK, one Chinese character needs only one underscore (<code>_</code>).</p>
+  </main>
+
 ## BETWEEN AND
 
 The `BETWEEN AND` operator selects values between two values. These values can be numerals, literals, or dates. Syntax:
@@ -294,9 +300,10 @@ SELECT column_name [,column_name...] FROM table_name WHERE
 [NOT] BETWEEN min_const_value AND max_const_value;
 ```
 
-> **Notice**
->
-> The bound values of an interval query cannot be exchanged because the values between them must be greater than or equal to the left value and less than or equal to the right value. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>The bound values of an interval query cannot be exchanged because the values between them must be greater than or equal to the left value and less than or equal to the right value.</p>
+  </main>
 
 Example:
 
@@ -321,11 +328,13 @@ The `IN` operator specifies multiple values in a `WHERE` clause. The values can 
 SELECT column_name [,column_name...] FROM table_name WHERE
 column_name [NOT] IN (const_value,const_value,const_value...);
 ```
-
-> **Notice**
->
-> * The value types in the `[NOT] IN` set must be consistent or compatible with each other. 
-> * The values in the `[NOT] IN` set do not support wildcards. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <ul>
+    <li>The value types in the <code>[NOT] IN</code> set must be consistent or compatible with each other.</li>
+    <li>The values in the <code>[NOT] IN</code> set do not support wildcards. </li>
+    </ul>
+  </main>
 
 Example:
 
