--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/5.query-by-group-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/5.query-by-group-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 The GROUP BY clause groups query results. 
 
-## Syntax:
+## Syntax
 
 `GROUP BY` supports grouping by a single field or multiple fields. You can also use the `WHERE` clause to filter data before grouping, use the `HAVING` clause to filter data after grouping, and use the `ORDER BY` clause to sort data after grouping. Syntax for the GROUP BY clause:
 
@@ -68,13 +68,13 @@ Query the number of orders placed by each customer and print the customer ID and
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order GROUP BY user_id;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1011 |            3 |
-|     1022 |            4 |
-|     1033 |            2 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|     1011   |            3    |
+|     1022   |            4    |
+|     1033   |            2    |
++------------+-----------------+
 3 rows in set
 ```
 
@@ -84,16 +84,16 @@ Query the number of orders placed by each customer each year and print the custo
 
 ```sql
 obclient> SELECT user_id Customer ID, order_year Year of order placement, COUNT(order_id) Number of orders FROM fruit_order GROUP BY user_id,order_year;
-+----------+--------------+--------------+
-| Customer ID   | Year of order placement     | Number of orders     |
-+----------+--------------+--------------+
-|     1011 |         2019 |            1 |
-|     1011 |         2020 |            2 |
-|     1022 |         2019 |            2 |
-|     1022 |         2021 |            2 |
-|     1033 |         2020 |            1 |
-|     1033 |         2021 |            1 |
-+----------+--------------+--------------+
++------------+------------------------+-----------------+
+| Customer ID| Year of order placement| Number of orders|
++------------+------------------------+-----------------+
+|       1011 |                   2019 |               1 |
+|       1011 |                   2020 |               2 |
+|       1022 |                   2019 |               2 |
+|       1022 |                   2021 |               2 |
+|       1033 |                   2020 |               1 |
+|       1033 |                   2021 |               1 |
++------------+------------------------+-----------------+
 6 rows in set
 ```
 
@@ -103,12 +103,12 @@ Query the number of orders placed by each customer in 2020 and print the custome
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order t WHERE t.order_year = 2020 GROUP BY user_id;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1011 |            2 |
-|     1033 |            1 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1011 |               2 |
+|       1033 |               1 |
++------------+-----------------+
 2 rows in set
 ```
 
@@ -118,11 +118,11 @@ Query customers who placed two or more orders in 2019 and print the customer IDs
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order t WHERE t.order_year = 2019 GROUP BY user_id HAVING COUNT(order_id)>=2;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1022 |            2 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1022 |               2 |
++------------+-----------------+
 1 row in set
 ```
 
@@ -130,17 +130,18 @@ The preceding sample code is equivalent to:
 
 ```sql
 obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM fruit_order t WHERE t.order_year = 2019 GROUP BY user_id HAVING Number of orders >= 2;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1022 |            2 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1022 |               2 |
++------------+-----------------+
 1 row in set
 ```
 
-> **Note**
->
-> If a `GROUP BY` query contains the `HAVING` clause, the data is first grouped and then filtered based on the conditions specified in `HAVING` clause. Aggregate functions can be used after the `HAVING` clause is executed. These aggregate functions may be different from those following the `SELECT` statement. 
+<main id="notice" type='explain'>
+  <h4>Note</h4>
+  <p>If a <code>GROUP BY</code> query contains the <code>HAVING</code> clause, the data is first grouped and then filtered based on the conditions specified in <code>HAVING</code> clause. Aggregate functions can be used after the <code>HAVING</code> clause is executed. These aggregate functions may be different from those following the <code>SELECT</code> statement.</p>
+</main>
 
 ### Sort data after grouping
 
@@ -148,12 +149,12 @@ Query the maximum order amount of each customer and print the customer IDs and m
 
 ```sql
 obclient> SELECT user_id Customer ID, MAX(fruit_price) Maximum order amount FROM fruit_order t GROUP BY user_id ORDER BY Maximum order amount DESC;
-+----------+--------------+
-| Customer ID   | Maximum order amount     |
-+----------+--------------+
-|     1033 |        63.66 |
-|     1011 |        58.83 |
-|     1022 |        34.44 |
-+----------+--------------+
++------------+---------------------+
+| Customer ID| Maximum order amount|
++------------+---------------------+
+|       1033 |               63.66 |
+|       1011 |               58.83 |
+|       1022 |               34.44 |
++------------+---------------------+
 3 rows in set
 ```
