--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/6.use-limit-in-query-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/6.use-limit-in-query-of-mysql-mode.md
@@ -2,7 +2,7 @@
 
 You can use the LIMIT clause to limit the number of rows returned for a SELECT query. This feature is often used to specify the number of pages returned. 
 
-## LIMIT syntax
+## Syntax
 
 Syntax of the SQL queries that include the `LIMIT` clause:
 
@@ -27,7 +27,7 @@ Query the former five records of the `order_id ID` and `fruit_price` columns in 
 ```sql
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 5;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  1 |        13.11 |
 |  2 |        23.34 |
@@ -39,7 +39,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 5;
 
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 0,5;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  1 |        13.11 |
 |  2 |        23.34 |
@@ -57,7 +57,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 0,
    ```sql
    obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 3,3;
    +----+--------------+
-   | ID | Order amount     |
+   | ID | Order amount |
    +----+--------------+
    |  4 |        22.21 |
    |  5 |        51.55 |
@@ -71,7 +71,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 0,
    ```sql
    obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order;
    +----+--------------+
-   | ID | Order amount     |
+   | ID | Order amount |
    +----+--------------+
    |  1 |        13.11 |
    |  2 |        23.34 |
@@ -87,7 +87,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 0,
 
    obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order LIMIT 3,7;
    +----+--------------+
-   | ID | Order amount     |
+   | ID | Order amount |
    +----+--------------+
    |  4 |        22.21 |
    |  5 |        51.55 |
@@ -106,7 +106,7 @@ To retrieve the record of the maximum order amount, you can sort the orders in d
 ```sql
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY fruit_price DESC LIMIT 1;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  9 |        63.66 |
 +----+--------------+
@@ -136,7 +136,7 @@ Set the `page_size` parameter to `2` to retrieve data of page 1, page 2, and pag
 ```sql
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY fruit_price DESC;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  9 |        63.66 |
 |  6 |        58.83 |
@@ -152,7 +152,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY
 
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY fruit_price DESC LIMIT 0,2;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  9 |        63.66 |
 |  6 |        58.83 |
@@ -161,7 +161,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY
 
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY fruit_price DESC LIMIT 2,2;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  5 |        51.55 |
 |  8 |        34.44 |
@@ -170,7 +170,7 @@ obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY
 
 obclient> SELECT order_id ID, fruit_price Order amount FROM fruit_order ORDER BY fruit_price DESC LIMIT 4,2;
 +----+--------------+
-| ID | Order amount     |
+| ID | Order amount |
 +----+--------------+
 |  2 |        23.34 |
 |  4 |        22.21 |
@@ -200,15 +200,15 @@ obclient> SELECT user_id Customer ID, COUNT(order_id) Number of orders FROM frui
       HAVING count(order_id)>=2
       ORDER BY Number of orders DESC
       LIMIT 2;
-+----------+--------------+
-| Customer ID   | Number of orders     |
-+----------+--------------+
-|     1022 |            2 |
-+----------+--------------+
++------------+-----------------+
+| Customer ID| Number of orders|
++------------+-----------------+
+|       1022 |               2 |
++------------+-----------------+
 1 row in set
 ```
 
-## Usage notes
+## Considerations
 
 * `LIMIT` does not support expressions and can be followed only by numbers. 
 
