--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/5.subquery-of-mysql-mode-develop.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/7.multi-table-join-query-of-mysql-mode/5.subquery-of-mysql-mode-develop.md
@@ -12,10 +12,10 @@ Subqueries can be divided into the following types based on the row and column n
 
 | Subquery types | Result set | Clauses |
 |-------|------|---------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| Scalar subqueries | Single column and single row | <ul><li>`SELECT`, </li><li> `WHERE`,  </li><li> and `HAVING`</li></ul> |
-| Column subquery | Single column and multiple rows | <ul><li>`WHERE`, </li><li> and `HAVING` </li></ul> |
-| Row subquery | Multiple columns and multiple rows | <ul><li>`WHERE`, </li><li> and `HAVING` </li></ul> |
-| Table subquery | Multiple rows and multiple columns | <ul><li>`FROM` and </li><li> `EXISTS`   </li></ul> |
+| Scalar subqueries | Single column and single row | <ul><li>`SELECT` </li><li>`WHERE`  </li><li>`HAVING`</li></ul> |
+| Column subquery | Single column and multiple rows | <ul><li>`WHERE` </li><li>`HAVING` </li></ul> |
+| Row subquery | Multiple columns and multiple rows | <ul><li>`WHERE` </li><li>`HAVING` </li></ul> |
+| Table subquery | Multiple rows and multiple columns | <ul><li>`FROM` </li><li>`EXISTS`   </li></ul> |
 
 ## Scenarios
 
@@ -39,9 +39,10 @@ Subqueries can contain the following keywords: `IN`, `ANY`, `SOME`, and `ALL`.
 
 * The `ALL` keyword can be used with operators such as `=`, `>`, `>=`, `<`, `<=`, and `<>` to specify values that are equal to, greater than, greater than or equal to, less than, less than or equal to, or not equal to all the specified data. 
 
-> **Notice**
->
-> If the `NOT IN` keyword is used, and the column value in a subquery is `NULL`, the result of the outer query is empty. 
+  <main id="notice" type='notice'>
+    <h4>Notice</h4>
+    <p>If the <code>NOT IN</code> keyword is used, and the column value in a subquery is <code>NULL</code>, the result of the outer query is empty.</p>
+  </main>
 
 ## Examples
 
@@ -96,21 +97,21 @@ INSERT INTO job_grades VALUE ('E', 5000, 5999);
 
 ```sql
 obclient> SELECT a.*,(SELECT count(*) FROM emp b WHERE b.deptno = a.deptno) AS Number of employees FROM dept a;
-+--------+------------+-------------+--------------+
-| deptno | dname      | location    | Number of employees     |
-+--------+------------+-------------+--------------+
-|     20 | ACCOUNTING | Los Angeles |            2 |
-|     30 | OPERATIONS | CHICAGO     |            2 |
-|     40 | SALES      | NEW YORK    |            2 |
-+--------+------------+-------------+--------------+
++--------+------------+-------------+--------------------+
+| deptno | dname      | location    | Number of employees|
++--------+------------+-------------+--------------------+
+|     20 | ACCOUNTING | Los Angeles |                  2 |
+|     30 | OPERATIONS | CHICAGO     |                  2 |
+|     40 | SALES      | NEW YORK    |                  2 |
++--------+------------+-------------+--------------------+
 3 rows in set
 
 obclient> SELECT (SELECT a.dname FROM dept a, emp b WHERE a.deptno = b.deptno AND b.empno = 1566) AS Department name;
-+--------------+
-| Department name      |
-+--------------+
-| SALES        |
-+--------------+
++----------------+
+| Department name|
++----------------+
+| SALES          |
++----------------+
 1 row in set
 ```
 
@@ -120,13 +121,13 @@ Use the result set of a subquery as a table and give an alias to the table. For 
 
 ```sql
 obclient> SELECT t1.deptno,sa AS 'Average salary', t2.grade_level FROM (SELECT deptno,avg(a.sal) sa FROM emp a GROUP BY a.deptno) t1, job_grades t2 WHERE t1.sa BETWEEN t2.lowest_sal AND t2.highest_sal;
-+--------+--------------+-------------+
-| deptno | Average salary     | grade_level |
-+--------+--------------+-------------+
-|     20 |  1900.000000 | A           |
-|     30 |  2225.000000 | B           |
-|     40 |  2987.500000 | B           |
-+--------+--------------+-------------+
++--------+---------------+-------------+
+| deptno | Average salary| grade_level |
++--------+---------------+-------------+
+|     20 |   1900.000000 | A           |
+|     30 |   2225.000000 | B           |
+|     40 |   2987.500000 | B           |
++--------+---------------+-------------+
 3 rows in set
 ```
 
@@ -153,7 +154,7 @@ obclient> SELECT t1.deptno,sa AS 'Average salary', t2.grade_level FROM (SELECT d
    obclient> SELECT empname Employee name, empno Employee ID, job Job, sal Salary FROM emp WHERE sal < ALL (SELECT DISTINCT sal
    FROM emp WHERE job = 'MANAGER') AND job!= 'MANAGER';
    +--------------+--------------+----------+---------+
-   | Employee name     | Employee ID     | Job     | Salary    |
+   | Employee name| Employee ID  | Job      | Salary  |
    +--------------+--------------+----------+---------+
    | SMITH        |         1369 | CLERK    |  800.00 |
    | ALLEN        |         1499 | SALESMAN | 1600.00 |
@@ -163,7 +164,7 @@ obclient> SELECT t1.deptno,sa AS 'Average salary', t2.grade_level FROM (SELECT d
    obclient> SELECT empname Employee name, empno Employee ID, job Job, sal Salary FROM emp WHERE sal < ALL (SELECT min(sal)
        FROM emp WHERE job = 'MANAGER') AND job!= 'MANAGER';
    +--------------+--------------+----------+---------+
-   | Employee name     | Employee ID     | Job     | Salary    |
+   | Employee name| Employee ID  | Job      | Salary  |
    +--------------+--------------+----------+---------+
    | SMITH        |         1369 | CLERK    |  800.00 |
    | ALLEN        |         1499 | SALESMAN | 1600.00 |
@@ -193,7 +194,7 @@ Example:
 ```sql
 obclient> SELECT exists(SELECT empno FROM emp WHERE sal = 3000) AS 'EXISTS returns 1 or 0';
 +----------------------+
-| EXISTS returns 1 or 0     |
+| EXISTS returns 1 or 0|
 +----------------------+
 |                    1 |
 +----------------------+
