--- a/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/2.use-numeric-functions-in-queries-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/4.read-data-of-mysql-mode/8.use-operators-and-functions-in-query-of-mysql-mode/2.use-numeric-functions-in-queries-of-mysql-mode.md
@@ -8,7 +8,7 @@ General numerical functions include the sum function SUM(), average function AVG
 
 ## Examples
 
-Create a table named `toys_order_ny` and enter order data. 
+Create a table named `toys_order` and enter order data. 
 
 ```sql
 obclient> CREATE TABLE toys_order (
