--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/3.c3p0-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/3.c3p0-connection-pool-configuration-example-of-oracle-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a C3P0 connection pool
+# Configure a C3P0 connection pool
 
-This topic describes how to configure dependencies for a C3P0 connection pool and provides relevant sample code. 
+This topic provides a configuration example of a C3P0 connection pool. 
 
 ## Configure dependencies
 
