--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/4.proxool-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/4.proxool-connection-pool-configuration-example-of-oracle-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a Proxool connection pool
+# Configure a Proxool connection pool
 
-This topic describes how to configure dependencies and configuration files for a Proxool connection pool and provides relevant sample code. 
+This topic provides a configuration example of a Proxool connection pool. 
 
 ## Configure dependencies
 
