--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/5.hikaricp-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/5.hikaricp-connection-pool-configuration-example-of-oracle-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a HiKariCP connection pool
+# Configure a HiKariCP connection pool
 
-This topic describes how to configure dependencies and configuration files for a HiKariCP connection pool and provides relevant sample code. 
+This topic provides a configuration example of a HiKariCP connection pool. 
 
 ## Configure dependencies
 
