--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/8.jdbc-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/8.jdbc-connection-pool-configuration-example-of-oracle-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a JDBC connection pool
+# Configure a JDBC connection pool
 
-This topic provides an example of configuring a JDBC connection pool. 
+This topic provides a configuration example of a JDBC connection pool. 
 
 When you use JDBC to connect to a database, you need to configure the relevant parameters properly to achieve the best performance of the database. This topic provides some recommended configurations for these parameters. 
 
