--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/2.connect-to-an-oceanbase-tenant-by-using-obclient-of-oracle-mode.md
@@ -1,6 +1,6 @@
 # Connect to an OceanBase Database tenant by using OBClient
 
-This topic describes the prerequisites and procedure for connecting to an Oracle tenant of OceanBase Database by using OBClient. 
+This topic describes the prerequisites and procedure for connecting to an Oracle tenant of OceanBase Database by using OBClient.
 
 ## Prerequisites
 
@@ -36,7 +36,7 @@ This topic describes the prerequisites and procedure for connecting to an Oracle
 
       * `-u`: the tenant account. Two account formats are supported: `Username@Tenant name#Cluster name` and `Cluster name:Tenant name:Username`. The default administrator username of an Oracle tenant is `SYS`. 
 
-      * `-P`: the port for connecting to OceanBase Database, which is also the listened-to port of the OBProxy. Default value: `2883`, which can be customized when OBProxy is deployed. 
+      * `-P`: the port for connecting to OceanBase Database, which is also the listening port of the OBProxy. Default value: `2883`, which can be customized when OBProxy is deployed. 
 
       * `-c`: specifies that comments must not be ignored in the runtime environment of MySQL. 
 
