--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/6.deploy-odc-command-line/2.modify-the-configuration-file-odc-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/6.deploy-odc-command-line/2.modify-the-configuration-file-odc-command-line.md
@@ -4,7 +4,7 @@ Before you deploy ODC, you must enter the version information of the ODC Docker 
 
 ## Procedure
 
-1. Log on to the server where OCP is installed as the root user.
+1. Log on to the server where OCP is installed as the `root` user.
 
    <main id="notice" type='explain'>
      <h4>Note</h4>
