--- a/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/6.deploy-odc-command-line/3.start-deployment-odc-command-line.md
+++ b/en-US/4.deploy/3.deploy-oceanbase-database-enterprise/4.command-line-deployment/6.deploy-odc-command-line/3.start-deployment-odc-command-line.md
@@ -6,7 +6,7 @@ The Docker image of ODC has been saved as `odc.tar.gz` and stored in the `/root/
 
 ## Procedure
 
-1. Log on to the server where OCP is installed as the root user.
+1. Log on to the server where OCP is installed as the `root` user.
 
    <main id="notice" type='explain'>
      <h4>Note</h4>
@@ -59,7 +59,7 @@ The Docker image of ODC has been saved as `odc.tar.gz` and stored in the `/root/
    [2019-08-16 14:26:03.155233] INFO [clear_step9: uninstalling odc and remove docker, logfile: /root/t-oceanbase-antman/logs/uninstall_odc.log]
    ```
 
-## Subsequent operations
+## What to do next
 
 If ODC is no longer needed, you can uninstall it.
 
