--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/1.overview-of-object-naming-conventions.md
@@ -2,7 +2,7 @@
 
 This topic describes the general naming conventions for OceanBase Database objects.
 
-During database development, database objects should be named in a standardized manner to make code more readable and easier to understand and inherit. This topic provides developers with recommendations on database object naming conventions.
+During database development, database objects should be named in a standardized manner to make code more readable and easier to understand and inherit. This topic provides developers with suggestions on database object naming conventions.
 
 ## General conventions
 
