--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/6.other-naming-conventions.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/1.object-naming-conventions/6.other-naming-conventions.md
@@ -1,6 +1,6 @@
 # Other naming conventions
 
-This topic provides recommendations for naming other objects in OceanBase Database to help developers standardize the naming of relevant database objects.
+This topic provides suggestions for naming other objects in OceanBase Database to help developers standardize the naming of relevant database objects.
 
 ## Index naming
 
