--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/1.field-design.md
@@ -41,7 +41,7 @@ You need to consider the field data types and lengths during field design. This 
 
    * We do not recommend that you use characters as the data types of time fields, which may cause implicit type conversion.
 
-* Recommendation on data field selection
+* Suggestions on data field selection
 
    We recommend that you use the following methods, especially for large tables with millions of rows:
 
