--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/3.partition-table-design.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/3.partition-table-design.md
@@ -22,7 +22,7 @@ This topic describes the recommended structure design for partitioned tables in 
 
    * Scenarios: tables with obvious access hotspots
 
-* To use partitioned tables, you need to use appropriate partitioning keys and partitioning strategies. Only recommendations on partitioning type selection are provided here. For more information, see **Create and manage partitioned tables**.
+* To use partitioned tables, you need to use appropriate partitioning keys and partitioning strategies. Only suggestions on partitioning type selection are provided here. For more information, see **Create and manage partitioned tables**.
 
    * HASH partitioning: Select a field with a high degree of distinction and the highest frequency of occurrence in the query condition as the partitioning key for hash partitioning.
 
