--- a/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/4.index-design.md
+++ b/en-US/7.reference/4.development-reference/4.database-design-specifications-and-practices/2.object-structure-design-specification/4.index-design.md
@@ -33,7 +33,7 @@ Examples of creating an index in MySQL mode:
 
 ## Index design
 
-### Requirements and recommendations on a single-value index
+### Requirements and suggestions on a single-value index
 
 * Follow the leftmost prefix principle when you create an index.
 
@@ -157,7 +157,7 @@ Examples of creating an index in MySQL mode:
 
 * We recommend that you use the covering index in table queries to avoid table access by index primary key.
 
-### Requirements and recommendations on a composite index
+### Requirements and suggestions on a composite index
 
 * If an index contains multiple columns, you need to appropriately specify the order of the columns. Generally, the first column in an index should be a column with high cardinality, where the cardinality of a data column is represented by the number of unique values in the column. In other words, the leftmost column must have the highest degree of distinction.
 
@@ -191,7 +191,7 @@ Examples of creating an index in MySQL mode:
 
    * When Index `idx_abc(a,b,c)` has already been created, do not create Indexes `idx_a(a)` and `idx_ab(a,b)`.
 
-### Recommendations on indexes on partitioned tables
+### Suggestions on indexes on partitioned tables
 
 * Select an index in the following precedence: local index > global partitioned index > global index. Use a global index only when necessary.
 
