--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/12.connect-to-the-oceanbase-database-through-hibernate-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/12.connect-to-the-oceanbase-database-through-hibernate-of-mysql-mode.md
@@ -6,9 +6,9 @@ This topic provides a Hibernate connection example and tests several general fea
 
 ```java
 <dependency>
-   <groupId>com.alipay.oceanbase</groupId>
+   <groupId>com.oceanbase</groupId>
    <artifactId>oceanbase-client</artifactId>
-   <version>3.2.3</version>
+   <version>2.4.0</version>
 </dependency>
 <dependency>
    <groupId>org.hibernate</groupId>
