--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/4.proxool-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/4.proxool-connection-pool-configuration-example-of-mysql-mode.md
@@ -1,20 +1,30 @@
-# Example of configuring a Proxool connection pool
+# Configure a Proxool connection pool
 
-This topic describes how to configure dependencies and configuration files for a Proxool connection pool and provides relevant sample code. 
+This topic provides a configuration example of a Proxool connection pool. 
 
 ## Configure dependencies
 
 ```java
 <dependency>
-            <groupId>proxool</groupId>
-            <artifactId>proxool-cglib</artifactId>
-            <version>0.9.1</version>
-        </dependency>
-        <dependency>
-            <groupId>proxool</groupId>
-            <artifactId>proxool</artifactId>
-            <version>0.9.1_20141120</version>
-        </dependency>
+    <groupId>com.oceanbase</groupId>
+    <artifactId>oceanbase-client</artifactId>
+    <version>2.4.0</version>
+</dependency>
+<dependency>
+      <groupId>proxool</groupId>
+      <artifactId>proxool-cglib</artifactId>
+      <version>0.9.1</version>
+</dependency>
+<dependency>
+      <groupId>proxool</groupId>
+      <artifactId>proxool</artifactId>
+      <version>0.9.1_20141120</version>
+</dependency>
+<dependency>
+    <groupId>commons-logging</groupId>
+    <artifactId>commons-logging</artifactId>
+    <version>1.2</version>
+</dependency>
 ```
 
 ### Configuration files
@@ -24,7 +34,7 @@ jdbc-1.proxool.alias=test
 jdbc-1.proxool.driver-class=com.oceanbase.jdbc.Driver
 jdbc-1.proxool.driver-url=jdbc:oceanbase://10.100.xxx.xxx:30035/test
 jdbc-1.user=test@tt3
-jdbc-1.password=test
+jdbc-1.password=******
 
 jdbc-1.proxool.maximum-connection-count=8
 jdbc-1.proxool.minimum-connection-count=5
