--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/8.jdbc-connection-pool-configuration-example-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/14.use-the-database-connection-pool-of-mysql-mode/8.jdbc-connection-pool-configuration-example-of-mysql-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a JDBC connection pool
+# Configure a JDBC connection pool
 
-This topic provides an example of configuring a JDBC connection pool. 
+This topic provides a configuration example of a JDBC connection pool. 
 
 When you use JDBC to connect to a database, you need to configure the relevant parameters properly to achieve the best performance of the database. This topic provides some recommended configurations for these parameters. 
 
@@ -14,9 +14,9 @@ This connection example involves the following configuration parameters:
 
 * `rewriteBatchedStatements`: We recommend that you set the value to `TRUE`. 
 
-   * By default, the JDBC driver of OceanBase Database disregards the executeBatch() statement. It splits a group of SQL statements to be executed in a batch, and sends them to the database one by one. In this case, a batch insert operation is indeed a bunch of single insert operations, resulting in low performance. To implement real batch insertion, you must set this parameter to `TRUE`, so that the driver can execute SQL statements in batches. You can use the addBatch method to combine multiple INSERT statements on the same table into one INSERT statement that contains multiple values to improve the performance of batch insert operations. 
+   * By default, the JDBC driver of OceanBase Database disregards the `executeBatch()` statement. It splits a group of SQL statements to be executed in a batch, and sends them to the database one by one. In this case, a batch insert operation is indeed a bunch of single insert operations, resulting in low performance. To implement real batch insertion, you must set this parameter to `TRUE`, so that the driver can execute SQL statements in batches. You can use the addBatch method to combine multiple `INSERT` statements on the same table into one `INSERT` statement that contains multiple values to improve the performance of batch insert operations. 
 
-   * You must use the prepareStatement statement to prepare each INSERT statement and then execute addBatch. Otherwise, the statements cannot be merged for execution. 
+   * You must use the prepareStatement statement to prepare each `INSERT` statement and then execute addBatch. Otherwise, the statements cannot be merged for execution. 
 
 * `allowMultiQueries`: We recommend that you set the value to `TRUE`. 
 
@@ -40,7 +40,7 @@ This connection example involves the following configuration parameters:
 
    * Send the SQL text that contains a question mark (`?`) to the database server for preparation (`SQL_audit: request_type=5`).
 
-   * Execute the statement based on real values in the database (SQL_audit: request_type=6).`` 
+   * Execute the statement based on real values in the database (`SQL_audit: request_type=6`).
 
 * `cachePrepStmts`: specifies whether to enable the PS cache to cache PreparedStatments to avoid repeated preparation on the client side and server side. `cachePrepStmts=TRUE` is applicable to scenarios where `useServerPrepStms` is set to `TRUE` and batch execution is performed repeatedly for the same SQL statement. Each batch execution contains the prepare operation and the setting of `executecachePrepStmts=TRUE`. This avoids repeated preparations. 
 
