--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md
@@ -1,6 +1,6 @@
 # Connect to an OceanBase Database tenant by using OBClient
 
-This topic describes the prerequisites and procedure for connecting to a MySQL tenant of OceanBase Database by using OBClient. 
+This topic describes how to connect to a MySQL tenant of OceanBase Database by using OBClient. 
 
 ## Prerequisites
 
@@ -14,9 +14,9 @@ This topic describes the prerequisites and procedure for connecting to a MySQL t
 
 2. Connect to OceanBase Database. 
 
-   You can connect to OceanBase Database directly or by using an OBProxy. 
+   You can connect to OceanBase Database directly or by using an OceanBase Data Proxy (ODP). 
 
-   * To connect to the MySQL tenant by using an OBProxy, run the following command:
+   * To connect to the MySQL tenant by using an ODP, run the following command:
 
       ```sql
       obclient -h10.10.10.1 -uusername@obtenant#obdemo -P2883 -ppassword -c -A oceanbase
@@ -30,11 +30,11 @@ This topic describes the prerequisites and procedure for connecting to a MySQL t
 
       Parameters:
 
-      * `-h`: the IP address for connecting to OceanBase Database, which is usually the IP address of an OBProxy. 
+      * `-h`: the IP address for connecting to OceanBase Database, which is usually the IP address of an ODP. 
 
       * `-u`: the tenant account. Two account formats are supported: `Username@Tenant name#Cluster name` and `Cluster name:Tenant name:Username`. The default username of the administrator of the MySQL tenant is `root`. 
 
-      * `-P`: the port for connecting to OceanBase Database, which is also the listened-to port of the OBProxy. Default value: `2883`, which can be customized when OBProxy is deployed. 
+      * `-P`: the port for connecting to OceanBase Database, which is also the listening port of the ODP. Default value: `2883`, which can be customized when ODP is deployed. 
 
       * `-c`: specifies that comments must not be ignored in the runtime environment of MySQL. 
 
@@ -76,7 +76,7 @@ This topic describes the prerequisites and procedure for connecting to a MySQL t
 
       * `oceanbase`: the name of the database to be accessed. You can change it to a business database. 
 
-      * When you use the direct connection method, make sure that the tenant resources are distributed on the OBServer you specified. Otherwise, you cannot connect to the tenant by using this OBServer. 
+      * When you use the direct connection method, make sure that the tenant resources are distributed on the OBServer node you specified. Otherwise, you cannot connect to the tenant by using this OBServer node. 
 
       Example:
 
