--- a/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/8.connect-to-the-oceanbase-database-through-spring-boot-of-mysql-mode.md
+++ b/en-US/3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/8.connect-to-the-oceanbase-database-through-spring-boot-of-mysql-mode.md
@@ -1,10 +1,11 @@
-# Connect to OceanBase Database by using SpringBoot
+# Connect to OceanBase Database by using Spring Boot
 
-This topic provides a SpringBoot connection example. 
+This topic provides a Spring Boot connection example. 
 
 ## Environment configuration
 
-JDK1.8 and OceanBase Database V3.x (MySQL/Oracle mode) have been deployed.
+* JDK 1.8
+* OceanBase Database V3.x (MySQL/Oracle mode)
 
 ## Sample code
 
@@ -212,7 +213,7 @@ public class App
 }
 ```
 
-Run the preceding code. If the following log is returned, it indicates that the startup is successful. 
+Run the preceding code. If the following log is returned, the startup is successful. 
 
 ![SpringBoot connection example](https://obbusiness-private.oss-cn-shanghai.aliyuncs.com/doc/img/observer-enterprise/V3.2.3/zh-CN/3.development-guide/4.database-design-specifications-and-practices/06.database-design-best-practices/02.development-framework-connection-database-example/01.springboot-connection-example/SpringBoot%20%E8%BF%9E%E6%8E%A5%E7%A4%BA%E4%BE%8B.png)
 
