--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/1.database-connection-pool-configuration-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/1.database-connection-pool-configuration-of-oracle-mode.md
@@ -22,7 +22,7 @@ The following JDBC parameters are important and must be configured. You can spec
 | socketTimeout | The network timeout period for a read request. The default value is `0`, which indicates that the default timeout period of the operating system is used. | 5000ms |
 | connectTimeout | The timeout period for establishing a connection. The default value is `0`, which indicates that the default timeout period of the operating system is used. | 500ms |
 
-## Recommendations on connection pool settings
+## Suggestions on connection pool settings
 
 * You can retain a minimum of two connections for the console and adjust the configuration based on the business concurrency and transaction time. 
 
