--- a/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/2.tomcat-connection-pool-configuration-example-of-oracle-mode.md
+++ b/en-US/3.develop/2.application-development-of-oracle-mode/1.database-connection-of-oracle-mode/13.use-the-database-connection-pool-of-oracle-mode/2.tomcat-connection-pool-configuration-example-of-oracle-mode.md
@@ -1,6 +1,6 @@
-# Example of configuring a Tomcat connection pool
+# Configure a Tomcat connection pool
 
-This topic describes a configuration example of a Tomcat connection pool. 
+This topic provides a configuration example of a Tomcat connection pool. 
 
 ## Example
 
