--- a/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.configure-and-view-the-tenant-whitelist.md
+++ b/en-US/7.reference/2.administrator-guide/2.basic-database-management/4.manage-tenants/10.configure-and-view-the-tenant-whitelist.md
@@ -1,10 +1,10 @@
-# Set and view the tenant whitelist
+# Set and view the tenant allowlist
 
-You can use the tenant whitelist feature to allow only specific clients to access a tenant.
+You can use the tenant allowlist feature to allow only specific clients to access a tenant.
 
 ## Background
 
-The tenant whitelist contains a list of IP addresses of clients that are allowed to access a tenant. You can set the tenant whitelist based on your business requirements. IP addresses in the tenant whitelist can be in one of the following formats:
+The tenant allowlist contains a list of IP addresses of clients that are allowed to access a tenant. You can set the tenant allowlist based on your business requirements. IP addresses in the tenant allowlist can be in one of the following formats:
 
 * Regular IP addresses. Example: `10.10.10.10,10.10.10.11`
 
@@ -16,13 +16,13 @@ The tenant whitelist contains a list of IP addresses of clients that are allowed
 
 ## Procedure
 
-To set IP addresses in the tenant whitelist, you need to specify the `ob_tcp_invited_nodes` parameter, which is a global parameter for a tenant. The default value is `127.0.0.1,::1`, which indicates that the tenant is accessible only to the clients on the server where the tenant is hosted.
+To set IP addresses in the tenant allowlist, you need to specify the `ob_tcp_invited_nodes` parameter, which is a global parameter for a tenant. The default value is `127.0.0.1,::1`, which indicates that the tenant is accessible only to the clients on the server where the tenant is hosted.
 
-To view and set the tenant whitelist by using SQL statements, perform the following operations:
+To view and set the tenant allowlist by using SQL statements, perform the following operations:
 
 1. Log on to a tenant of the database as the administrator.
 
-2. Execute the following statement to view the tenant whitelist:
+2. Execute the following statement to view the tenant allowlist:
 
    ```sql
    obclient> SHOW VARIABLES LIKE 'ob_tcp_invited_nodes';
@@ -35,7 +35,7 @@ To view and set the tenant whitelist by using SQL statements, perform the follow
 
    A value of `%` indicates that the tenant is accessible to clients with any IP address.
 
-3. To modify the whitelist, execute the following statements:
+3. To modify the allowlist, execute the following statements:
 
    Sample code:
 
